Initial commit with basic website structure

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Ali Arale</p>
     </footer>
 </body>
 </html>
